Refactor ResidentController and ResidentDAO for improved null handling; update tests for consistency and coverage